--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "serve": "next start",
-    "deploy": "gh-pages -d out"
+    "static": "next build && touch ./out/.nojekyll",
+    "deploy": "npm run static && gh-pages -d out -t true"
   },
   "dependencies": {
     "@apollo/server": "^4.10.2",
@@ -31,7 +32,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "type-graphql": "^2.0.0-beta.6",
-    "vaul": "^0.8.0"
+    "vaul": "^0.8.0",
+    "web-cv": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
