--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && echo. > out/.nojekyll && gh-pages -d out"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.2",
@@ -17,6 +18,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
+    "gh-pages": "^6.3.0",
     "lucide-react": "^0.454.0",
     "next": "^15.3.1",
     "react": "^19.1.0",
